2004-06-21  Seth Robertson  <seth@not.baka.org>

	* lib/b_relay.c (bk_relay_iohhandler): Because we overfill the
	output buffer when it fills up and we throttle, we should not
	automatically unthrottle when we write one buffer.  Theoretically,
	this should NOT cause an infinite amount of memory to be sunk, but
	we can seriously overfill especially if buffer sizes are in
	increasing size order.  While I was being stupid about something
	else, I discovered this and assumed it was the problem.

2004-06-16  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_netutils.c (bk_netutils_make_conn): Arguments for
	bk_netutils_make_conn_verbose() were totally in the wrong order.

2004-06-09  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_dll.c (bk_dll_insert_internal): Actually return return
	value instead of always DICT_OK. DOH!

2004-06-09  Seth Robertson  <seth@pearl.sysdetect.com>

	* src/bttcp.c (connect_complete): Now with added verbosity about
	connections accepted and completed.

	* src/bkrelay.c: Now relaying!

2004-06-08  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_addrgroup.c (bk_addressgroup_suspend): Allow server
	sockets to be suspended from being accepted for a time.

2004-06-08  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_vptr.c (bk_vptr_append): Make RO component (source
	bk_vptr) constant.

2004-06-07  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_run.c (bk_run_signal): Shut up Insure.

	* lib/b_realloc.c (bk_malloc_wrap_destroy): DOH! Use while() not
	for() when destroying clc's.

	* lib/b_general.c (bk_general_init): Initialize malloc wrapper if
	__INSURE__
	(bk_general_destroy): Destroy malloc wrapper if __INSURE__

2004-05-28  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_string.c (bk_string_csv_quote): Escape NEWLINES with the
	correct sequence. Put NUL in correct spot (if there's space).

	* lib/b_pollio.c (bk_polling_io_read): Null out event handler
	after dequeue.

2004-05-27  James Tanis  <jtt@buscemi.sysdetect.com>
